frontend/static/css/app.css
:root {
  font-family: system-ui, monospace;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light dark;
  color: rgba(255, 255, 255, 0.87);
  background-color: #242424;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

h1 {
  font-size: 3.2em;
  line-height: 1.1;
}

h1, h2, h3, h4, h5, h6 {
  font-family: monospace;
}

p {
  font-family: monospace;
}

button {
  border-width: 0;
  font-family: monospace;
  cursor: pointer;
}
button:hover {
  color: chartreuse;
}

a {
  font-family: monospace;
  margin-top: 10px;
  margin-bottom: 10px;
  text-decoration: none;
  color: inherit;
}
a:hover {
  cursor: pointer;
  color: chartreuse !important;
}
a:visited {
  text-decoration: none;
  color: inherit;
}

